# lipid_docking_benchmark

./: .gitignore  AGENTS.md  README.md  aggregate_10.8_13.51.csv  benchmark_runner_min.py  check_runs_and_lengths.py  config.yaml  excluded_entries.txt  list_missing_benchmark_runs.py  pose_benchmark.py  pose_benchmark_v18.py  prep_vina_from_refs.py  pyproject.toml  requirements.txt  run_boltz.sh  run_vina.py  setup.py  tmp_ids4.txt
analysis/: benchmark_20251017_131340.csv  benchmark_20251017_131523.csv  benchmark_20251017_144554.csv  benchmark_20251020_110109.csv  benchmark_20251020_115447.csv  benchmark_20251024_105730.csv  benchmark_20251024_112239.csv  benchmark_20251024_112348.csv  benchmark_20251024_114021.csv  benchmark_20251104_132133.csv  boltz_batch_results_20251119_180002.csv  boltz_batch_results_20251124_184216.csv  boltz_batch_results_20251124_184259.csv  vina_batch_results.csv  vina_batch_results_20251119_180337.csv  vina_batch_results_20251124_190630.csv  vina_batch_results_best5.csv  vina_batch_results_latest.csv
benchmark_references/: 1FDQ.cif  1FE3.cif  1IKT.cif  1LN1.cif  1MID.cif  1PUB.cif  1PZ4.cif  1S8G.cif  2FTB.cif  2OVD.cif  2WC5.cif  2WEX.cif  2Z9Z.cif  3B74.cif  3BFH.cif  3BKS.cif  3KXW.cif  3KYQ.cif  3Q8G.cif  3RGQ.cif  4KII.cif  4RC8.cif  4X9X.cif  5B29.cif  5E7X.cif  5HM3.cif  5K8K.cif  5NTY.cif  5NU2.cif  6GF9.cif  6IWP.cif  6MD0.cif  6NOK.cif  6SLD.cif  6XU5.cif  6XU9.cif  6XUW.cif  6XW9.cif  7FZK.cif  7RJI.cif  (+4 more)
contact_tools/: __init__.py  measure_contacts.py  run_batch_contacts.py
docs/: .gitignore  AGENTS.md  README.md  TODO.md  (+7 more)
(+3808 files in other folders)
